workshop/capstone/argo-rollout/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-api
  labels:
    app: my-api
spec:
  ingressClassName: nginx
  rules:
  - host: rollouts-demo.127.0.0.1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rollouts-demo
            port:
              number: 80
